# licor

./: .gitignore  Cargo.toml  README.md  create_r_package.R  debug_test.R  detailed_test.R  final_build.R  final_success_test.R  final_test.R  inspect_data.py  licor.toml  plan.md  quick_build_test.R  test_basic_package.R  test_final_package.R  test_functionality.R
.claude/: settings.local.json
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: configs.rs  devices.rs  errors.rs  lib.rs  macros.rs  parser.rs  parsing.rs
old-r-client/: DESCRIPTION  NAMESPACE  README.md  build_package.R  install_rextendr.R  simple_test.R  test_cli_from_r.R  test_python_client.py  test_rust.rs  test_simple_extendr.R
old-r-client/R/: licor_client.R
old-r-client/inst/extdata/: 2025-05-30-0948_logdata_flr_kinetics_and_gas_ex1
old-r-client/src/: Makevars  entrypoint.c
old-r-client/src/rust/: Cargo.toml
old-r-client/tests/: testthat.R
old-r-client/tests/testthat/: test-conversion.R
output2/: 2025-05-30-0948_logdata_flr_kinetics_and_gas_ex1.parquet  2025-05-30-1203_logdata_F2.parquet
python-client/: Cargo.toml  README.md  pyproject.toml
python-client/python/licor_client/: __init__.py  __init__.pyi
python-client/src/: lib.rs
python-client/tests/: test_integration.py
r-client/: DESCRIPTION  NAMESPACE
r-client/R/: extendr-wrappers.R
r-client/inst/extdata/: 2025-05-30-1203_logdata_F2
r-client/man/: convert.Rd  file_to_dataframe.Rd
r-client/src/: Makevars  Makevars.win  entrypoint.c  licorclient-win.def
r-client/src/rust/: Cargo.toml
r-client/src/rust/src/: lib.rs
