[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
polars = { version = "0.46", features = ["lazy", "parquet", "strings"] }

[workspace.metadata]
name = "licor-parser"
description = "Type-safe parser for LI-COR instrument data"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Riley Leff <rileyleff@gmail.com>"]