[package]
name = 'licorclient'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'licorclient'

[dependencies]
extendr-api = { version = "0.7", features = ["result_list"] }
licor-core = { git = "https://github.com/RileyLeff/licor.git"}
polars = { version = "0.48", features = ["lazy", "parquet", "strings"] }
